2004-04-07  Jackson Harper  <jackson@ximian.com>

	* Thread.cs: Use new culture info method for constructing the
	current culture.
	
2004-04-07  Lluis Sanchez Gual <lluis@ximian.com>

	* ReaderWriterLock.cs: When a thread holds a writer lock, a call to
	  AcquireReaderLock works like a call to AcquireWriterLock.

2004-04-06  Lluis Sanchez Gual <lluis@ximian.com>

	* Monitor.cs: In Wait(), release the synchronization context when 
	  exitContext is true.

2004-04-06  Lluis Sanchez Gual <lluis@ximian.com>

	* LockCookie.cs: Keep in this class the count of reader or writer locks
	  for a thread, not only whether it has locks or not.
	* LockQueue.cs: Added property for checking if a thread is waiting in
	  the queue. Wait now returns a boolean that set to false on timeout 
	  expiration.
	* ReaderWriterLock.cs: Started fixing bugs but I had to rewrite a lot of it.
	  The main change is that now it keeps a reader lock count for each
	  thread. This is needed since methods like ReleaseLock or 
	  UpgradeToWriterLock need to return a per-thread status in LockCookie.
	  Also added support for recursive writer-lock requests.

2004-03-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ThreadAbortException.cs: use same HResult as MS.
	* Timer.cs: abort the running thread when disposing the Timer. This
	fixes NullRefs when finishing xsp.

2004-03-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NativeOverlapped.cs: added 2 new internal fields.
	* Overlapped.cs: implemented, but it's not used.

	* ThreadPool.cs: implemented BindHandle.

2004-03-08  Zoltan Varga  <vargaz@freemail.hu>

	* Timer.cs (Dispose): Applied patch from Jaroslaw Kowalski 
	(jaak@zd.com.pl). Fix finalization problems during appdomain unload.

2004-02-23  Jackson Harper <jackson@ximian.com>

	* LockCookie.cs: Add some fields for restoring locks.
	* ReaderWriterLock.cs: Implement
	* LockQueue.cs: New File - used for queueing thread locks in
	ReaderWriterLock.
	